k8s.yaml
kind: Service 
apiVersion: v1
metadata:
  name: k8s-sec-3-things-svc
  namespace: bc-production
spec:
  selector:
    app: k8s-sec-3-things
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: k8s-sec-3-things
  namespace: bc-production
spec:
  selector:
    matchLabels:
      app: k8s-sec-3-things
  template:
    metadata:
      labels:
        app: k8s-sec-3-things
      annotations:
        kubernetes.io/change-cause: $IMAGE_NAME
    spec:
      containers:
        - name: k8s-sec-3-things
          image: $IMAGE_NAME
          ports:
          - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
            requests:
              cpu: 100m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: k8s-sec-3-things
  namespace: bc-production
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: k8s-sec-3-things
spec:
  rules:
  - host: k8s-sec-3-things.cloudogu.com
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-sec-3-things-svc
          servicePort: 80
